# sp-dart

./: .gitignore  README.md  ffigen.yaml  justfile  pubspec.yaml
.github/: CODEOWNERS
example/: README.md  main.dart  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/sp_dart/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: home_page.dart  main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
hook/: build.dart
lib/: sp_dart.dart
native/: Cargo.toml  rust-toolchain.toml  uniffi.toml
native/src/: sp.rs
rust/: Cargo.toml  uniffi-bindgen.rs
rust/src/: ffi.rs  lib.rs
scripts/: generate_bindings.sh
sp_demo/: README.md  pubspec.yaml
sp_demo/android/app/: build.gradle.kts
sp_demo/android/app/src/main/: AndroidManifest.xml
sp_demo/android/app/src/main/kotlin/com/example/sp_demo/: MainActivity.kt
sp_demo/ios/Runner/: Info.plist
sp_demo/ios/Runner.xcodeproj/: project.pbxproj
sp_demo/lib/: home_page.dart
sp_demo/test/: widget_test.dart
test/: sp_dart_test.dart
