[package]
name = "sp_dart_ffi"
version = "0.1.0"
authors = ["mus'ab <musabyakubu1000@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "This is the simple wrapper crate which exports sp-ffi"
homepage = "https://github.com/MusabYK/sp-dart"
repository = "https://github.com/MusabYK/sp-dart"
publish = false

[lib]
name = "sp_dart_ffi"
crate-type = ["lib", "cdylib", "staticlib"]

# binary target for local uniffi-bindgen
[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
bdk-ffi = { package = "bdk-ffi", git = "https://github.com/MusabYK/bdk-ffi.git", branch = "silentpayments" } #Use this when testing against the remote repository.
#bdk-ffi = { package = "bdk-ffi", path = "../../bdk-ffi/bdk-ffi" } #Use this for Local Development
uniffi = { version = "=0.31.2", features = ["cli"] }
uniffi-dart = { git = "https://github.com/Uniffi-Dart/uniffi-dart", tag = "v0.2.1+v0.31.2", features = ["build"] }
camino = "1.2"

[build-dependencies]
uniffi = { version = "=0.31.2", features = ["build"] }
uniffi-dart = { git = "https://github.com/Uniffi-Dart/uniffi-dart", tag = "v0.2.1+v0.31.2", features = ["build"] }