[package]
name = "sp_dart_ffi"
version = "0.1.0"
authors = ["mus'ab <musabyakubu1000@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "This is the simple wrapper crate which exports sp-ffi"
homepage = "https://github.com/MusabYK/sp-dart"
repository = "https://github.com/MusabYK/sp-dart"
publish = false

[lib]
name = "sp_dart_ffi"
crate-type = ["lib", "cdylib", "staticlib"]

# binary target for local uniffi-bindgen
[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
sp_lib = { git      = "https://github.com/cygnet3/spdk", package  = "silentpayments", features = ["receiving", "sending", "encode"] }
secp256k1 = { version = "0.29.0", features = ["rand", "global-context", "rand-std"] }
bitcoin_hashes = "0.13.0"
hex = "0.4"
thiserror = "1.0"
uniffi = { version = "=0.31.1", features = ["cli"] }
uniffi-dart = { git = "https://github.com/Uniffi-Dart/uniffi-dart", tag = "v0.2.0+v0.31.1", features = ["build"] }
camino = "1.2"

[build-dependencies]
uniffi = { version = "=0.31.1", features = ["build"] }
uniffi-dart = { git = "https://github.com/Uniffi-Dart/uniffi-dart", tag = "v0.2.0+v0.31.1", features = ["build"] }

[dev-dependencies]
rust-bip39 = { version = "1.0.0", features = ["rand"] }
bitcoin = { version = "0.32.8", features = ["serde"] }
serde_json = "1.0"